--- a/app/src/main/res/drawable/cell_shape.xml
+++ b/app/src/main/res/drawable/cell_shape.xml
@@ -2,11 +2,11 @@
     android:shape="rectangle">
     <stroke
         android:width="1dp"
-        android:color="#B83B5E"/>
+        android:color="#000000"/>
     <corners android:radius="0dp"/>
     <padding
-        android:bottom="1dp"
-        android:left="1dp"
-        android:right="1dp"
-        android:top="1dp"/>
+        android:bottom="1px"
+        android:left="1px"
+        android:right="1px"
+        android:top="1px"/>
 </shape>
