--- a/app/src/main/res/layout/activity_attendance.xml
+++ b/app/src/main/res/layout/activity_attendance.xml
@@ -217,7 +217,7 @@
             android:layout_marginRight="10px">
 
             <TableLayout
-                android:id="@+id/previewContent_TableLayout"
+                android:id="@+id/dtr_TableLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
             </TableLayout>
