--- a/app/src/main/res/layout/activity_generate.xml
+++ b/app/src/main/res/layout/activity_generate.xml
@@ -55,7 +55,7 @@
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Generate"
+            android:text="Authenticate"
             android:textAlignment="center"
             android:textColor="#6A2C70"
             android:textSize="30sp"/>
