--- a/app/src/main/res/layout/activity_log_in_attendance.xml
+++ b/app/src/main/res/layout/activity_log_in_attendance.xml
@@ -82,11 +82,14 @@
                 android:id="@+id/id_EditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Enter ID"
-                android:inputType="number"
+                android:layout_margin="30px"
+                android:hint="Enter ID Number"
                 android:textColor="#6A2C70"
+                android:inputType="number"
                 android:textSize="30sp"
-                android:textAlignment="center"/>
+                android:textAlignment="center"
+                android:background="@drawable/round_edittext_bg"
+                android:padding="16dp"/>
         </LinearLayout>
     </LinearLayout>
 
