--- a/app/src/main/res/drawable/round_body_bg.xml
+++ b/app/src/main/res/drawable/round_body_bg.xml
@@ -1,7 +1,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#F08A5D"/>
-    <corners android:radius="50dp"/>
+    <solid android:color="@color/white"/>
+    <corners android:radius="20dp"/>
+
 
 </shape>
