--- a/app/src/main/res/layout/activity_admin_screen.xml
+++ b/app/src/main/res/layout/activity_admin_screen.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/layoutbackground"
     tools:context=".MainActivity"
     android:orientation="vertical">
 
@@ -42,9 +43,12 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="#F08A5D"
         android:orientation="vertical"
-        android:gravity="top">
+        android:gravity="top"
+        android:background="@drawable/round_body_bg"
+        android:layout_margin="35px"
+        android:padding="50px">
+        <!--android:background="#F08A5D"-->
 
         <View
             android:id="@+id/divider4"
@@ -124,7 +128,7 @@
                     android:layout_height="wrap_content"
                     android:hint="Admin Password"
                     android:ems="10"
-                    android:inputType="numberPassword"
+                    android:inputType="textPassword"
                     android:layout_margin="10px"
                     android:textColor="#6A2C70"
                     android:textSize="20sp"
@@ -217,15 +221,60 @@
                     android:background="@drawable/round_edittext_bg"
                     android:padding="16dp"/>
 
+                <TableLayout
+                    android:id="@+id/birthday_TableLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TableRow
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="#F9ED69"
+                        android:layout_margin="20px">
+
+                        <Spinner
+                            android:id="@+id/month_Spinner"
+                            android:layout_width="0dp"
+                            android:layout_weight="0.5"
+                            android:layout_height="30sp"
+                            android:layout_margin="10px"/>
+
+                        <View
+                            android:id="@+id/divider3"
+                            android:layout_width="2dp"
+                            android:layout_height="match_parent"
+                            android:background="?android:attr/listDivider" />
+
+                        <Spinner
+                            android:id="@+id/day_Spinner"
+                            android:layout_width="0dp"
+                            android:layout_weight="0.25"
+                            android:layout_height="30sp" />
+
+                        <View
+                            android:id="@+id/divider3"
+                            android:layout_width="2dp"
+                            android:layout_height="match_parent"
+                            android:background="?android:attr/listDivider" />
+
+                        <Spinner
+                            android:id="@+id/year_Spinner"
+                            android:layout_width="0dp"
+                            android:layout_weight="0.25"
+                            android:layout_height="30sp" />
+                    </TableRow>
+                </TableLayout>
+
             </LinearLayout>
+
         </ScrollView>
 
-        <DatePicker
+
+        <!--<DatePicker
             android:id="@+id/birthday_DatePicker"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"/>
-
+            -->
     </LinearLayout>
 
     <!--Footer-->
