--- a/app/src/main/res/layout/activity_generate_dtr.xml
+++ b/app/src/main/res/layout/activity_generate_dtr.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/layoutbackground"
     tools:context=".GenerateDTR"
     android:orientation="vertical">
 
@@ -42,9 +43,12 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="#F08A5D"
         android:orientation="vertical"
-        android:gravity="top">
+        android:gravity="top"
+        android:background="@drawable/round_body_bg"
+        android:layout_margin="35px"
+        android:padding="50px">
+        <!--android:background="#F08A5D"-->>
 
         <View
             android:id="@+id/divider4"
@@ -137,8 +141,12 @@
                     android:textColor="@color/black"
                     android:text="Last Name, First Name"
                     android:textSize="10sp"
-                    android:textAlignment="center"
-                    android:background="@drawable/table_border_underline"/>
+                    android:textAlignment="center" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1px"
+                    android:background="@color/black" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -172,7 +180,8 @@
                             android:textColor="@color/black"
                             android:text="Month Year"
                             android:textSize="8sp"
-                            android:textStyle="italic" />
+                            android:textStyle="italic"
+                            android:gravity="center"/>
 
                         <TextView
                             android:layout_width="0dp"
@@ -182,6 +191,43 @@
                             android:text=""
                             android:textSize="8sp"
                             android:textStyle="italic"/>
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:textColor="@color/black"
+                            android:text=""
+                            android:textSize="8sp"
+                            android:textStyle="italic"/>
+                    </TableRow>
+
+                    <TableRow
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <View
+                            android:layout_width="0dp"
+                            android:layout_height="0dp"
+                            android:layout_weight="1"
+                            android:background="@color/black" />
+
+                        <View
+                            android:layout_width="0dp"
+                            android:layout_height="1px"
+                            android:layout_weight="1"
+                            android:background="@color/black" />
+
+                        <View
+                            android:layout_width="0dp"
+                            android:layout_height="0px"
+                            android:layout_weight="1"
+                            android:background="@color/black" />
+
+                        <View
+                            android:layout_width="0dp"
+                            android:layout_height="0px"
+                            android:layout_weight="1"
+                            android:background="@color/black" />
                     </TableRow>
 
                     <TableRow
@@ -206,7 +252,6 @@
                             android:gravity="right"
                             android:textStyle="italic"/>
                         <TextView
-                            android:background="@drawable/table_border_underline"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
@@ -214,6 +259,29 @@
                             android:text=""
                             android:textSize="8sp"
                             android:textStyle="italic"/>
+                    </TableRow>
+
+                    <TableRow
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <View
+                            android:layout_width="0dp"
+                            android:layout_height="0dp"
+                            android:layout_weight="1"
+                            android:background="@color/black" />
+
+                        <View
+                            android:layout_width="0dp"
+                            android:layout_height="0px"
+                            android:layout_weight="1"
+                            android:background="@color/black" />
+
+                        <View
+                            android:layout_width="0dp"
+                            android:layout_height="1px"
+                            android:layout_weight="1"
+                            android:background="@color/black" />
                     </TableRow>
 
                     <TableRow
@@ -238,7 +306,6 @@
                             android:gravity="right"
                             android:textStyle="italic"/>
                         <TextView
-                            android:background="@drawable/table_border_underline"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
@@ -246,6 +313,29 @@
                             android:text=""
                             android:textSize="8sp"
                             android:textStyle="italic"/>
+                    </TableRow>
+
+                    <TableRow
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <View
+                            android:layout_width="0dp"
+                            android:layout_height="0dp"
+                            android:layout_weight="1"
+                            android:background="@color/black" />
+
+                        <View
+                            android:layout_width="0dp"
+                            android:layout_height="0px"
+                            android:layout_weight="1"
+                            android:background="@color/black" />
+
+                        <View
+                            android:layout_width="0dp"
+                            android:layout_height="1px"
+                            android:layout_weight="1"
+                            android:background="@color/black" />
                     </TableRow>
 
 
@@ -289,17 +379,17 @@
                             android:textStyle="bold"/>
 
                         <TextView
-                            android:background="@drawable/table_border"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="0.28571428571428571428571428571429"
-                            android:textColor="@color/black"
-                            android:text="P.M."
-                            android:textSize="9sp"
+                            android:background="@drawable/table_border"
                             android:gravity="center"
                             android:paddingTop="5px"
                             android:paddingBottom="5px"
-                            android:textStyle="bold"/>
+                            android:text="P.M."
+                            android:textColor="@color/black"
+                            android:textSize="9sp"
+                            android:textStyle="bold" />
                         <TextView
                             android:background="@drawable/table_border"
                             android:layout_width="0dp"
@@ -326,7 +416,7 @@
                             android:layout_weight="1"
                             android:textColor="@color/black"
                             android:text="Day"
-                            android:textSize="9sp"
+                            android:textSize="7sp"
                             android:gravity="center"
                             android:paddingTop="5px"
                             android:paddingBottom="5px"/>
@@ -338,7 +428,7 @@
                             android:layout_weight="1"
                             android:textColor="@color/black"
                             android:text="Arrival"
-                            android:textSize="9sp"
+                            android:textSize="7sp"
                             android:gravity="center"
                             android:paddingTop="5px"
                             android:paddingBottom="5px"
@@ -350,8 +440,10 @@
                             android:layout_weight="1"
                             android:textColor="@color/black"
                             android:text="Departure"
-                            android:textSize="9sp"
+                            android:textSize="7sp"
                             android:gravity="center"
+                            android:paddingTop="5px"
+                            android:paddingBottom="5px"
                             android:textStyle="bold"/>
 
                         <TextView
@@ -361,7 +453,7 @@
                             android:layout_weight="1"
                             android:textColor="@color/black"
                             android:text="Arrival"
-                            android:textSize="9sp"
+                            android:textSize="7sp"
                             android:gravity="center"
                             android:paddingTop="5px"
                             android:paddingBottom="5px"
@@ -373,7 +465,7 @@
                             android:layout_weight="1"
                             android:textColor="@color/black"
                             android:text="Departure"
-                            android:textSize="9sp"
+                            android:textSize="7sp"
                             android:gravity="center"
                             android:paddingTop="5px"
                             android:paddingBottom="5px"
@@ -385,7 +477,7 @@
                             android:layout_weight="1"
                             android:textColor="@color/black"
                             android:text="Hours"
-                            android:textSize="9sp"
+                            android:textSize="7sp"
                             android:gravity="center"
                             android:paddingTop="5px"
                             android:paddingBottom="5px"
@@ -397,7 +489,7 @@
                             android:layout_weight="1"
                             android:textColor="@color/black"
                             android:text="Minutes"
-                            android:textSize="9sp"
+                            android:textSize="7sp"
                             android:gravity="center"
                             android:paddingTop="5px"
                             android:paddingBottom="5px"
@@ -458,12 +550,13 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/black"
                     android:text=""
-                    android:textSize="7.5sp"
-                    android:gravity="left"
-                    android:textStyle="italic"
-                    android:background="@drawable/table_border_underline"/>
+                    android:textSize="7.5sp" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1px"
+                    android:background="@color/black" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -477,12 +570,13 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/black"
                     android:text=""
-                    android:textSize="7.5sp"
-                    android:gravity="left"
-                    android:textStyle="italic"
-                    android:background="@drawable/table_border_underline"/>
+                    android:textSize="7.5sp" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1px"
+                    android:background="@color/black" />
 
                 <TextView
                     android:id="@+id/schoolHead_TextView"
